Compatibility with JDK > 10